# HTTPServer

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  httpserver.example.ini
.github/workflows/: ci.yml
include/http_server/: cgi_handler.h  config_loader.h  connection_io.h  file_handler.h  logger.h  mime.h  path_utils.h  php_handler.h  range_utils.h  request.h  response.h  server.h  socket_utils.h  status_codes.h  thread_pool.h  tls_context.h
scripts/: build.sh
src/: cgi_handler.c  config_loader.c  connection_io.c  file_handler.c  logger.c  main.c  mime.c  path_utils.c  php_handler.c  range_utils.c  request.c  response.c  server.c  socket_utils.c  status_codes.c  thread_pool.c  tls_context.c
systemd/: README.md  httpserver.service  httpserver.socket
tests/: CMakeLists.txt  test_config_loader.cpp  test_logger.cpp  test_main.cpp  test_mime.cpp  test_path_utils.cpp  test_range_utils.cpp  test_request.cpp  test_response.cpp  test_socket_utils.cpp  test_status_codes.cpp  test_thread_pool.cpp
tests/integration/: CMakeLists.txt  test_integration.cpp
www/: index.html  info.php  style.css
www/cgi-bin/: hello.cgi
